[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "config-morpher @ git+https://github.com/kenyo3026/configmorpher.git",
    "litellm>=1.80.11",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "fastmcp>=0.2.0",
    "llm-guard>=0.3.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
guardrail = "cascadeguard.cli:main"
guardrail-api = "cascadeguard.api:main"
guardrail-mcp = "cascadeguard.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]
